RESOLVED FIXED 242044
REGRESSION (r295094): Rivian’s reservation page is blank
https://bugs.webkit.org/show_bug.cgi?id=242044
Summary REGRESSION (r295094): Rivian’s reservation page is blank
zalan
Reported 2022-06-27 20:23:08 PDT
Attachments
Patch (10.42 KB, patch)
2022-06-27 20:32 PDT, zalan
no flags
zalan
Comment 1 2022-06-27 20:32:10 PDT
Antti Koivisto
Comment 2 2022-06-28 09:43:50 PDT
Comment on attachment 460511 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=460511&action=review > COMMIT_MESSAGE:6 > +=?UTF-8?q?REGRESSION=20(r295094):=20Rivian=E2=80=99s=20re?= > +=?UTF-8?q?servation=20page=20is=20blank=20https://bugs.webkit.org/show=5F?= > +=?UTF-8?q?bug.cgi=3Fid=3D242044=20<rdar://95659285>?= > + MIME-Version: 1.0 Content-Type: text/plain; charset=UTF-8 Content-Transfer-Encoding: 8bit > + > +Reviewed by NOBODY (OOPS!). what happened here?
Alexey Proskuryakov
Comment 3 2022-06-28 10:49:31 PDT
Looks like another issue with parsing titles out of git formatted patches, this time related to non-ASCII characters.
EWS
Comment 4 2022-06-28 16:47:49 PDT
Committed 251933@main (cd6d1d7723d8): <https://commits.webkit.org/251933@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460511 [details].
Note You need to log in before you can comment on or make changes to this bug.