REGRESSION (r295094): Rivian’s reservation page is blank https://bugs.webkit.org/show_bug.cgi?id=242044 <rdar://95659285>

Reviewed by Antti Koivisto.

This patch enables additional content to stretch when "height (min/max): -webkit-fill-available" is set.
In addition to checking the containing block, we now traverse the ancestor chain (similar to height percent dependency) and look for specified height values that we can use to resolve -webkit-fill-available.

* LayoutTests/fast/css/fill-available-with-percent-height-no-quirk-expected.html: Added.
* LayoutTests/fast/css/fill-available-with-percent-height-no-quirk-flex-expected.html: Added.
* LayoutTests/fast/css/fill-available-with-percent-height-no-quirk-flex.html: Added.
* LayoutTests/fast/css/fill-available-with-percent-height-no-quirk-flex2-expected.html: Added.
* LayoutTests/fast/css/fill-available-with-percent-height-no-quirk-flex2.html: Added.
* LayoutTests/fast/css/fill-available-with-percent-height-no-quirk.html: Added.
* LayoutTests/fast/css/fill-available-with-percent-height-quirk-expected.html: Added.
* LayoutTests/fast/css/fill-available-with-percent-height-quirk.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computeIntrinsicLogicalContentHeightUsing const):

Canonical link: https://commits.webkit.org/251933@main